force-app/main/default/objects/Chat__c/Chat__c.object-meta.xml
<CustomObject>
    <label>チャット</label>
    <nameField>
        <label>件名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>