force-app/main/default/objects/Chat__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ケース</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>チャット</relationshipLabel>
    <relationshipName>RelationMessageBoardCase</relationshipName>
    <type>Lookup</type>
</CustomField>