force-app/main/default/objects/Chat__c/fields/delRealEstateAgencyCompany__c.field-meta.xml
<CustomField>
    <fullName>delRealEstateAgencyCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>（不要）不動産仲介会社</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RelationMessageBoardAccount1</relationshipName>
    <type>Lookup</type>
</CustomField>