force-app/main/default/objects/Chat__c/fields/IsSNTOperationCharge__c.field-meta.xml
<CustomField>
    <fullName>IsSNTOperationCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>日本社宅サービス業務担当</label>
    <type>Checkbox</type>
</CustomField>