force-app/main/default/objects/Chat__c/fields/LastPostDate__c.field-meta.xml
<CustomField>
    <fullName>LastPostDate__c</fullName>
    <label>最終投稿日</label>
    <type>DateTime</type>
</CustomField>