force-app/main/default/objects/Chat__c/fields/RealEstateCompany__c.field-meta.xml
<CustomField>
    <fullName>RealEstateCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>不動産会社</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>チャット (社宅担当会社)</relationshipLabel>
    <relationshipName>RelationMessageBoardAccout3</relationshipName>
    <type>Lookup</type>
</CustomField>