force-app/main/default/objects/Chat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Content__c</columns>
    <columns>Status__c</columns>
    <columns>Deadline__c</columns>
    <columns>User__c</columns>
    <columns>NewMatter__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>